[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[workspace]
members = [
    "generic",
    "text",
    "naive", # indexlenmin scheduler
    "naive_ctx",
    "fast",
    "cmplog",
    "value_profile",
    "value_profile_cmplog",
    "rand_scheduler",
    "cov_accounting",
    "gramatron",
    "grimoire",
    "nautilus",
    "token_level",
    "fuzzbench_util",
]
exclude = [
    "LibAFL",
]
