[package]
name = "gramatron"
version = "0.0.1"
authors = ["Andrea Fioraldi <andreafioraldi@gmail.com>", "Dominik Maier <domenukk@gmail.com>"]
edition = "2021"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
which = { version = "4.0.2" }
num_cpus = "1.0"

[dependencies]
libafl = { path = "../LibAFL/libafl/", features = ["default", "nautilus"] }
libafl_targets = { path = "../LibAFL/libafl_targets/", features = ["sancov_pcguard_hitcounts", "libfuzzer"] }
serde_json = "1.0.68"
# TODO Include it only when building cc
libafl_cc = { path = "../LibAFL/libafl_cc/" }
nix = "0.23"
clap = { version = "3.0", features = ["derive"] }
mimalloc = { version = "*", default-features = false }
postcard = { version = "0.7", features = ["alloc"] } # no_std compatible serde serialization fromat

[lib]
name = "gramatron"
crate-type = ["staticlib"]
