[package]
name = "naive_ngram4"
version = "0.0.1"
authors = ["Andrea Fioraldi <andreafioraldi@gmail.com>", "Dominik Maier <domenukk@gmail.com>"]
edition = "2021"

[features]
no_link_main = ["libafl_targets/libfuzzer_no_link_main"]

[dependencies]
libafl = { path = "../LibAFL/libafl/" }
libafl_targets = { path = "../LibAFL/libafl_targets/", features = ["sancov_pcguard_hitcounts", "libfuzzer", "sancov_ngram4"] }
libafl_bolts = { path = "../LibAFL/libafl_bolts/" }
# TODO Include it only when building cc
libafl_cc = { path = "../LibAFL/libafl_cc/" }
clap = { version = "~4.2", features = ["default"] }
nix = { version = "0.29", features = ["fs"] }
mimalloc = { version = "*", default-features = false }

[lib]
crate-type = ["staticlib"]
