[package]
name = "nautilus_mopt"
version = "0.0.1"
authors = ["Andrea Fioraldi <andreafioraldi@gmail.com>", "Dominik Maier <domenukk@gmail.com>"]
edition = "2021"

[features]
no_link_main = ["libafl_targets/libfuzzer_no_link_main"]

[dependencies]
libafl = { path = "../LibAFL/libafl/", features = ["default", "nautilus"] }
libafl_bolts = { path = "../LibAFL/libafl_bolts/" }
libafl_targets = { path = "../LibAFL/libafl_targets/", features = ["sancov_pcguard_hitcounts", "libfuzzer"] }
serde_json = "1.0.68"
# TODO Include it only when building cc
libafl_cc = { path = "../LibAFL/libafl_cc/" }
nix = { version = "0.29", features = ["fs"] }
clap = { version = "4.0", features = ["derive"] }
mimalloc = { version = "*", default-features = false }
postcard = { version = "0.7", features = ["alloc"] } # no_std compatible serde serialization fromat

[lib]
crate-type = ["staticlib"]
